--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
-# Compiled class file
+# Build
+target/
 *.class
 
-# Log file
-*.log
+# IDE
+.idea/
+*.iml
+.vscode/
+*.swp
+*.
 
 # BlueJ files
 *.ctxt
@@ -21,3 +26,19 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Environment
+.env
+
+# Maven
+.mvn/wrapper/maven-wrapper.jar
+
+# Logs
+*.log
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Docker
+db_data/
